deployment/main/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    role: master
    tier: backend
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
    role: master
    tier: backend
