deployment/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # Securing Ingress Resources https://cert-manager.io/docs/usage/ingress/
    cert-manager.io/cluster-issuer: my-letsencrypt-issuer
spec:
  tls:
  - hosts:
    - raport.sin.net.pl
    secretName: sinnet-tls-secret
  rules:
  - host: raport.sin.net.pl
    http:
      paths:

        - path: /graphiql
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /graphql
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /voyager
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /altair
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /vendor
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /actuator
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080

        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-svc
              port:
                number: 80
